folder structured-separate componenets more readable-YupSchema

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 REACT_APP_BACKEND = http://localhost:2000/api/users/
+
+REACT_APP_ADMIN_FNAME = admin
+REACT_APP_ADMIN_LNAME =admin 
+REACT_APP_ADMIN_ROLE =admin
+REACT_APP_ADMIN_EMAIL = goavega@gmail.com
+REACT_APP_ADMIN_PASSWORD = goavega
