--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "4.1.0",
     "react-js-pagination": "3.0.3",
+    "react-paginate": "7.0.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "6.2.0",
